src/objects/actionHub__ActionDetail__c.object
<CustomObject>
    <description>actionHub Action Details</description>
    <fields>
        <fullName>actionHub__APIName__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__ActionId__c</fullName>
        <label>Action Id</label>
        <referenceTo>actionHub__Action__c</referenceTo>
        <relationshipLabel>Action Details</relationshipLabel>
        <relationshipName>Action_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>actionHub__ActionName__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__ActionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__DataType__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Encrypted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>actionHub__DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actionHub__DisplayName__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actionHub__EmptyValueText__c</fullName>
        <label>Empty Value Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__NullEmptyStringHandling__c</fullName>
        <label>Null Empty String Handling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No action</fullName>
                    <default>true</default>
                    <label>No action</label>
                </value>
                <value>
                    <fullName>Convert empty string to NULL</fullName>
                </value>
                <value>
                    <fullName>Convert NULL to empty string</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>actionHub__PicklistValues__c</fullName>
        <label>Picklist Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actionHub__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actionHub__RuleName__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__RuleName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceConnection__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__SourceConnection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Connection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectAPIName__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__SourceObjectAPIName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectDisplayName__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__SourceObjectDisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SuppressEmptyString__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Empty String</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actionHub__SuppressNull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetConnection__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__TargetConnection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Connection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetObjectAPIName__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__TargetObjectAPIName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetObjectDisplayName__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__TargetObjectDisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__Tooltip__c</fullName>
        <label>Tooltip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>actionHub__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parameter</fullName>
                </value>
                <value>
                    <fullName>Field Mapping</fullName>
                </value>
                <value>
                    <fullName>Response Mapping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>actionHub__ValueDisplayName__c</fullName>
        <label>Value Display Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actionHub__Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Action Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Action Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>